--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.544.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.60.0",
     "react-i18next": "^15.6.0",
     "react-router": "^7.6.3",
     "shadcn": "^3.3.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
