--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest",
+    "test:postman": "bash scripts/test-postman.sh",
+    "test:postman:ci": "newman run postman/collection.json -e postman/environment.json --env-var baseUrl=$SUPABASE_URL --env-var anonKey=$SUPABASE_ANON_KEY --reporters cli,junit --reporter-junit-export test-results.xml",
     "type-check": "tsc -b",
     "lint": "eslint",
     "build": "tsc -b && vite build",
@@ -60,6 +62,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
     "happy-dom": "^18.0.1",
+    "newman": "^6.2.1",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.1",
