--- a/.github/workflows/postman-tests.yml
+++ b/.github/workflows/postman-tests.yml
@@ -26,7 +26,7 @@ jobs:
       run: yarn install --frozen-lockfile
     
     - name: Run Postman tests
-      run: yarn test:postman:ci
+      run: yarn test:postman
       env:
         SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
         SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
